Avances sobre el trabajo práctico 2